# SKAB

./: .gitignore  .pre-commit-config.yaml  LICENSE  Load data.ipynb  Perfomance_evaluating.ipynb  README.md  check  evaluating.py  pyproject.toml  structure.md
algorithms/: Conv_AE.py  Isolation_Forest.py  LSTM_AE.py  LSTM_VAE.py  MSCRED.py  MSET.py  Vanilla_AE.py  Vanilla_LSTM.py
baselines/: .gitignore  ArimaFD.ipynb  autoencoder.ipynb  combined hotelling and q.ipynb  hotelling and q.ipynb  hotelling.ipynb  hotelling_q.ipynb  isolation_forest.ipynb  lstm.h5  lstm.ipynb  mscred.ipynb
core/: Conv_AE.py  Isolation_Forest.py  LSTM_AE.py  LSTM_VAE.py  MSCRED.py  MSET.py  Vanilla_AE.py  Vanilla_LSTM.py  metrics.py  t2.py  utils.py
data/: Load data.ipynb  README.md  no_anomaly_mode.csv
docs/: contributing.md
experiments/: autoencoder.ipynb  combined hotelling and q.ipynb  evaluating.py  hotelling.ipynb  isolation_forest.ipynb  lstm.h5  lstm.ipynb
notebooks/: ArimaFD.ipynb  Conv-AE.ipynb  Conv_AE.ipynb  EDA.ipynb  LSTM-AE.ipynb  LSTM-VAE.ipynb  LSTM_AE.ipynb  LSTM_VAE.ipynb  MSET.ipynb  README.md  VAE.ipynb  Vanilla_AE.ipynb  Vanilla_LSTM.ipynb  autoencoder.ipynb  example.ipynb  hotelling.ipynb  hotelling_q.ipynb  implement.ipynb  isolation_forest.ipynb  lstm.ipynb  model.py  mscred.ipynb  requirements.txt  t2_.py  t2_SKAB.ipynb  t2_with_q_SKAB.ipynb
notebooks-proper-eval/: ArimaFD.ipynb  Conv_AE.ipynb  LSTM_AE.ipynb  MSET.ipynb  Vanilla_AE.ipynb  Vanilla_LSTM.ipynb  isolation_forest.ipynb  mscred.ipynb  t2_SKAB.ipynb  t2_with_q_SKAB.ipynb
results/: results-T2.pkl  (+9 more)
(+57 files in other folders)
